--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
     <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <script src="sketch.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <title> proyecto josefina schiappacasse-irculos random</title>
   </head>
-  <body>
-    <script src="sketch.js"></script>
-  
-
+   <body>
+    <div class="container">
+      <header>
+        <h1>Tanteo<font face="Source Sans Pro"><font size=3>Josefina Schiappacasse B.</font></font></h1> 
+      </header>
+    </div>
+    
+    <table>
+      <tr>
+      <td><div id="p5"></div></td>
+      <td>
+      <div class="container">
+      <p><font face="EB Garamond"> <font color="black"><font size=6>Circulos random</font></font></font></p>
+      <p>Basado en <a href="https://p5js.org/es/examples/motion-bounce.html"><font color="black">p5.js</font></a>. </p>
+      <p><a href="https://editor.p5js.org/jose.schiappacasse/sketches/FmHw70VaR" title="ver sketch"><font color="black"><font size=3>Código</font></font></a></p>  
+    </td>
+      </tr>
+    </table>
+    <footer>
+     <div class= "container">
+        <p><font color="white">Ver repositorio</font>
+        <a href="https://github.com/josefinaschiappacasse/circulo-random" title="Repositorio de Github">aquí</a>
+      </p>
+     </div>
+    </footer>
 </body></html>
